# cev

./: Cargo.toml  README.md
benches/: cev.rs
src/: alloc_err.rs  cev.rs  lib.rs  raw_cev.rs
src/raw_cev/: raw_cev_tests.rs
tests/: cev.rs  test_append_ptr.rs  test_clone_ptr.rs  test_insert_ptr.rs  test_into_vec_ptr.rs  test_pop_ptr.rs  test_set_len_ptr.rs  test_truncate_ptr.rs  test_with_capacity_ptr.rs
